--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ types.js
 optimized-types.js
 
 # Build artifacts
-index.*
 !docs/index.html
 
 # Decrypted secrets
@@ -21,3 +20,6 @@ secrets.json
 
 # VSCode settings
 .vscode
+
+#Emacs
+*~
