--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ types.js
 optimized-types.js
 
 # Build artifacts
+index.*
 !docs/index.html
 
 # Decrypted secrets
@@ -20,6 +21,3 @@ secrets.json
 
 # VSCode settings
 .vscode
-
-#Emacs
-*~
